src/scrcpy_ffi.h

// ---------------------------------------------------------------------------
// Callback types — Dart side registers using NativeCallable.listener
// ---------------------------------------------------------------------------

/**
 * Triggered when a new video frame is decoded and the buffer is updated.
 * Dart side receives this and calls markTextureFrameAvailable() to redraw.
 * @param width  frame width in pixels
 * @param height frame height in pixels
 */
typedef void (*on_video_frame_ready_cb)(void* handle, int32_t width, int32_t height);
/**
 * Triggered when raw PCM audio samples (16-bit signed, interleaved stereo) are ready.
 * @param handle      session instance handle pointer
 * @param samples     pointer to the PCM sample array (valid until callback returns)
 * @param sample_count total sample count (not per-channel)
 * @param sample_rate  audio sample rate (typically 48000 Hz)
 * @param channels     channel count (typically 2)
 */
typedef void (*on_audio_pcm_ready_cb)(void* handle,
                                      const int16_t* samples,
                                      int32_t sample_count,
                                      int32_t sample_rate,
                                      int32_t channels);
/**
 * Triggered when the connection state changes.
 * @param handle      session instance handle pointer
 * @param state_code  one of the SCRCPY_STATE_* constants
 * @param device_name Android device model name (UTF-8, NULL if not available)
 */
typedef void (*on_connection_state_cb)(void* handle,
                                       int32_t state_code,
                                       const char* device_name);
/**
 * Triggered when the Android device's clipboard changes.
 * @param handle      session instance handle pointer
 * @param text new clipboard text content (UTF-8 string, NULL-terminated)
 */
typedef void (*on_clipboard_changed_cb)(void* handle, const char* text);
/**
 * Starts scrcpy: pushes server jar to device, configures sockets,
 * and starts video and audio decoding threads.
 * This function is non-blocking — the server runs on a background thread.
 *
 * Parameters are passed identically to the scrcpy CLI (e.g. ["--show-touches", "--max-fps=60"]).
 *
 * @return the instance handle pointer (void*) if starting successfully,
 *         or NULL if an immediate error occurs.
 *         The actual connection result is reported asynchronously via state_cb.
 */
FFI_EXPORT void* ffi_scrcpy_start(
    int argc,
    const char** argv,
    on_video_frame_ready_cb     video_cb,
    on_audio_pcm_ready_cb       audio_cb,
    on_connection_state_cb      state_cb,
    on_clipboard_changed_cb     clipboard_cb
);
/**
 * Stops the scrcpy session: closes sockets, kills the server on the device,
 * and frees memory. Safe to call multiple times.
 */
FFI_EXPORT void ffi_scrcpy_stop(void* handle);
/**
 * Cleans up and frees all scrcpy instances running in the background.
 * Call this when the app starts (or after a Hot Restart) to prevent orphaned FFI callbacks.
 */
FFI_EXPORT void ffi_scrcpy_cleanup_all(void);
/** Returns true if the scrcpy instance is currently running and active. */
FFI_EXPORT bool ffi_scrcpy_is_running(void* handle);
/**
 * Stops local video/audio decoding and texture updates while keeping the
 * server connection, packet drain and GPU context alive. Input/control events
 * from Flutter are ignored until resume. Idempotent.
 */
FFI_EXPORT bool ffi_scrcpy_pause(void* handle);
/**
 * Resumes local decoding. The next frame is accepted only from a fresh video
 * keyframe so no stale inter-frame data is rendered. Idempotent.
 */
FFI_EXPORT bool ffi_scrcpy_resume(void* handle);
/** Returns whether local media decoding is currently paused. */
FFI_EXPORT bool ffi_scrcpy_is_paused(void* handle);
/**
 * Initializes Dart's dynamically linked native API. Call once on the Dart UI
 * isolate before assigning a state port.
 */
FFI_EXPORT bool ffi_scrcpy_init_dart_api(void* data);
/** Assigns the ReceivePort native id for event-driven state notifications. */
FFI_EXPORT void ffi_scrcpy_set_state_port(void* handle, int64_t port);
/** Returns the most recently published connection state for diagnostics. */
FFI_EXPORT int32_t ffi_scrcpy_get_connection_state(void* handle);
// ---------------------------------------------------------------------------
// Legacy software-frame API
// ---------------------------------------------------------------------------

/**
 * Gets pointers to the 3 YUV planes (Y, U, V) containing the latest video frame.
 * The internal mutex is LOCKED until ffi_scrcpy_release_yuv_planes() is called.
 *
 * @param handle        session instance handle
 * @param out_width     [out] frame width in pixels
 * @param out_height    [out] frame height in pixels
 * @param out_y         [out] receives the Y plane address pointer
 * @param out_u         [out] receives the U plane address pointer
 * @param out_v         [out] receives the V plane address pointer
 * @param out_y_stride  [out] plane Y line stride
 * @param out_u_stride  [out] plane U line stride
 * @param out_v_stride  [out] plane V line stride
 * @return the AVFrame pointer representation, or NULL if no frame is available.
 */
FFI_EXPORT const uint8_t* ffi_scrcpy_get_yuv_planes(
    void* handle,
    int32_t* out_width,
    int32_t* out_height,
    const uint8_t** out_y,
    const uint8_t** out_u,
    const uint8_t** out_v,
    int32_t* out_y_stride,
    int32_t* out_u_stride,
    int32_t* out_v_stride
);
/**
 * Releases the lock on the YUV buffer after the Texture Provider has copied the data.
 */
FFI_EXPORT void ffi_scrcpy_release_yuv_planes(void* handle);
/**
 * Sends a touch event to the Android device.
 * @param handle     session instance handle pointer
 * @param action     SCRCPY_TOUCH_ACTION_*
 * @param pointer_id pointer identifier (e.g. touch finger index)
 * @param x, y       normalized coordinates (0.0 to 1.0)
 * @param pressure   touch pressure (0.0 to 1.0)
 */
FFI_EXPORT void ffi_scrcpy_send_touch(void*    handle,
                                      uint8_t  action,
                                      uint64_t pointer_id,
                                      float    x,
                                      float    y,
                                      float    pressure);
/**
 * Sends a key event to the Android device.
 * @param handle    session instance handle pointer
 * @param keycode   Android keycode (android.view.KeyEvent.KEYCODE_*)
 * @param action    SCRCPY_KEY_ACTION_*
 * @param repeat    repeat count (usually 0)
 * @param metastate modifier state mask (e.g. shift, control)
 */
FFI_EXPORT void ffi_scrcpy_send_key(void*    handle,
                                    uint32_t keycode,
                                    uint8_t  action,
                                    uint32_t repeat,
                                    uint32_t metastate);