lib/src/bindings/scrcpy_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Dart bindings for libscrcpy_ffi.
class ScrcpyFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ScrcpyFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ScrcpyFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Starts scrcpy: pushes server jar to device, configures sockets,
  /// and starts video and audio decoding threads.
  /// This function is non-blocking — the server runs on a background thread.
  ///
  /// Parameters are passed identically to the scrcpy CLI (e.g. ["--show-touches", "--max-fps=60"]).
  ///
  /// Returns the instance handle pointer (void*) if starting successfully,
  /// or NULL if an immediate error occurs.
  /// The actual connection result is reported asynchronously via [state_cb].
  ffi.Pointer<ffi.Void> ffi_scrcpy_start(
    int argc,
    ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
    on_video_frame_ready_cb video_cb,
    on_audio_pcm_ready_cb audio_cb,
    on_connection_state_cb state_cb,
    on_clipboard_changed_cb clipboard_cb,
  ) {
    return _ffi_scrcpy_start(
      argc,
      argv,
      video_cb,
      audio_cb,
      state_cb,
      clipboard_cb,
    );
  }

  late final _ffi_scrcpy_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Int,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            on_video_frame_ready_cb,
            on_audio_pcm_ready_cb,
            on_connection_state_cb,
            on_clipboard_changed_cb,
          )
        >
      >('ffi_scrcpy_start');
  late final _ffi_scrcpy_start = _ffi_scrcpy_startPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          on_video_frame_ready_cb,
          on_audio_pcm_ready_cb,
          on_connection_state_cb,
          on_clipboard_changed_cb,
        )
      >();

  /// Stops the scrcpy session: closes sockets, kills the server on the device,
  /// and frees memory. Safe to call multiple times.
  void ffi_scrcpy_stop(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_stop(handle);
  }

  late final _ffi_scrcpy_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_stop',
      );
  late final _ffi_scrcpy_stop = _ffi_scrcpy_stopPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Cleans up and frees all scrcpy instances running in the background.
  /// Call this when the app starts (or after a Hot Restart) to prevent orphaned FFI callbacks.
  void ffi_scrcpy_cleanup_all() {
    return _ffi_scrcpy_cleanup_all();
  }

  late final _ffi_scrcpy_cleanup_allPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
        'ffi_scrcpy_cleanup_all',
      );
  late final _ffi_scrcpy_cleanup_all = _ffi_scrcpy_cleanup_allPtr
      .asFunction<void Function()>();

  /// Returns true if the scrcpy instance is currently running and active.
  bool ffi_scrcpy_is_running(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_is_running(handle);
  }

  late final _ffi_scrcpy_is_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_is_running',
      );
  late final _ffi_scrcpy_is_running = _ffi_scrcpy_is_runningPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  /// Pauses local CPU/GPU media decoding without closing the session.
  bool ffi_scrcpy_pause(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_pause(handle);
  }

  late final _ffi_scrcpy_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_pause',
      );
  late final _ffi_scrcpy_pause = _ffi_scrcpy_pausePtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  /// Resumes local media decoding from a fresh video keyframe.
  bool ffi_scrcpy_resume(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_resume(handle);
  }

  late final _ffi_scrcpy_resumePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_resume',
      );
  late final _ffi_scrcpy_resume = _ffi_scrcpy_resumePtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  /// Whether local media decoding is paused.
  bool ffi_scrcpy_is_paused(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_is_paused(handle);
  }

  late final _ffi_scrcpy_is_pausedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_is_paused',
      );
  late final _ffi_scrcpy_is_paused = _ffi_scrcpy_is_pausedPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  /// Initializes Dart's native message API for event-driven callbacks.
  bool ffi_scrcpy_init_dart_api(ffi.Pointer<ffi.Void> data) {
    return _ffi_scrcpy_init_dart_api(data);
  }

  late final _ffi_scrcpy_init_dart_apiPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_init_dart_api',
      );
  late final _ffi_scrcpy_init_dart_api = _ffi_scrcpy_init_dart_apiPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  /// Attaches a Dart [ReceivePort] id for native state events.
  void ffi_scrcpy_set_state_port(ffi.Pointer<ffi.Void> handle, int port) {
    return _ffi_scrcpy_set_state_port(handle, port);
  }

  late final _ffi_scrcpy_set_state_portPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
      >('ffi_scrcpy_set_state_port');
  late final _ffi_scrcpy_set_state_port = _ffi_scrcpy_set_state_portPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  /// Returns the latest native connection state for diagnostics.
  int ffi_scrcpy_get_connection_state(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_get_connection_state(handle);
  }

  late final _ffi_scrcpy_get_connection_statePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_get_connection_state',
      );
  late final _ffi_scrcpy_get_connection_state =
      _ffi_scrcpy_get_connection_statePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Gets pointers to the 3 YUV planes (Y, U, V) containing the latest video frame.
  /// The internal mutex is LOCKED until [ffi_scrcpy_release_yuv_planes] is called.
  ///
  /// [handle] is the session instance handle.
  /// [out_width] is the frame width output.
  /// [out_height] is the frame height output.
  /// [out_y] receives the Y plane address pointer.
  /// [out_u] receives the U plane address pointer.
  /// [out_v] receives the V plane address pointer.
  /// [out_y_stride] receives the stride for plane Y.
  /// [out_u_stride] receives the stride for plane U.
  /// [out_v_stride] receives the stride for plane V.
  /// Returns the pointer to the raw YUV planes, or NULL if no frame is available.
  ffi.Pointer<ffi.Uint8> ffi_scrcpy_get_yuv_planes(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_y,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_u,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_v,
    ffi.Pointer<ffi.Int32> out_y_stride,
    ffi.Pointer<ffi.Int32> out_u_stride,
    ffi.Pointer<ffi.Int32> out_v_stride,
  ) {
    return _ffi_scrcpy_get_yuv_planes(
      handle,
      out_width,
      out_height,
      out_y,
      out_u,
      out_v,
      out_y_stride,
      out_u_stride,
      out_v_stride,
    );
  }

  late final _ffi_scrcpy_get_yuv_planesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('ffi_scrcpy_get_yuv_planes');
  late final _ffi_scrcpy_get_yuv_planes = _ffi_scrcpy_get_yuv_planesPtr
      .asFunction<
        ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// Releases the lock on the YUV buffer after the Texture Provider has copied the data.
  void ffi_scrcpy_release_yuv_planes(ffi.Pointer<ffi.Void> handle) {
    return _ffi_scrcpy_release_yuv_planes(handle);
  }

  late final _ffi_scrcpy_release_yuv_planesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ffi_scrcpy_release_yuv_planes',
      );
  late final _ffi_scrcpy_release_yuv_planes = _ffi_scrcpy_release_yuv_planesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Sends a touch event to the Android device.
  ///
  /// [handle] is the session instance handle.
  /// [action] is the touch action (SCRCPY_TOUCH_ACTION_*).
  /// [pointer_id] is the pointer ID (e.g., finger index).
  /// [x] and [y] are normalized coordinates (0.0 to 1.0).
  /// [pressure] is the touch pressure (0.0 to 1.0).
  void ffi_scrcpy_send_touch(
    ffi.Pointer<ffi.Void> handle,
    int action,
    int pointer_id,
    double x,
    double y,
    double pressure,
  ) {
    return _ffi_scrcpy_send_touch(handle, action, pointer_id, x, y, pressure);
  }

  late final _ffi_scrcpy_send_touchPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Uint8,
            ffi.Uint64,
            ffi.Float,
            ffi.Float,
            ffi.Float,
          )
        >
      >('ffi_scrcpy_send_touch');
  late final _ffi_scrcpy_send_touch = _ffi_scrcpy_send_touchPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, int, int, double, double, double)
      >();

  /// Sends a key event to the Android device.
  ///
  /// [handle] is the session instance handle.
  /// [keycode] is the Android keycode (android.view.KeyEvent.KEYCODE_*).
  /// [action] is the key action (SCRCPY_KEY_ACTION_*).
  /// [repeat] is the repeat count (usually 0).
  /// [metastate] is the modifier metastate bitmask (e.g., shift, control).
  void ffi_scrcpy_send_key(
    ffi.Pointer<ffi.Void> handle,
    int keycode,
    int action,
    int repeat,
    int metastate,
  ) {
    return _ffi_scrcpy_send_key(handle, keycode, action, repeat, metastate);
  }

  late final _ffi_scrcpy_send_keyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Uint32,
            ffi.Uint8,
            ffi.Uint32,
            ffi.Uint32,
          )
        >
      >('ffi_scrcpy_send_key');
  late final _ffi_scrcpy_send_key = _ffi_scrcpy_send_keyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int, int, int, int)>();
